objects/NamedAccountDomain__c.object
<CustomObject>
    <description>SFDC1-8819;New Object for Named Account Management</description>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-8819;Business Line lookup to business line object. Field is on Named account object</description>
        <inlineHelpText>Please choose a business line</inlineHelpText>
        <label>Business Line</label>
        <referenceTo>BusinessLine__c</referenceTo>
        <relationshipLabel>Named Account Domains</relationshipLabel>
        <relationshipName>NamedAccountDomains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>SFDC1-8819; Text field for Named account Management object</description>
        <inlineHelpText>Please enter domain name</inlineHelpText>
        <label>Domain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>SFDC1-8819;Region for Named Account management</description>
        <inlineHelpText>Please populate region</inlineHelpText>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                    <isActive>false</isActive>
                    <label>AMER</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Named Account Domain</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Named Account Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>